FEATURE #67027 - MD inplemetation for Grid Header: Seperate global actions (Add/Excel) from others need select a row to apply

--- a/app/assets/stylesheets/toolbar.scss
+++ b/app/assets/stylesheets/toolbar.scss
@@ -1,23 +1,64 @@
 @import "base";
 
-$toolbar_button_width: 60px;
-$toolbar_button_height: 50px;
+$toolbar_button_width: 45px;
+$toolbar_button_height: 30px;
 
 .grid-header {
   .toolbar-wrapper {
     // position: absolute;
-    top: 0;
-    right: 20px;
-    padding-top: 5px;
+    // top: 0;
+    // right: 20px;
+    padding: 1rem 3rem 0 10rem;
     margin: 0;
     overflow: hidden;
-    .toolbar {
+    .toolbar-global {
+      // float: right;
+      // position: relative;
+      // padding-top: 1em;
+      ul {
+        margin: 0;
+        padding: 0;
+        // float: right;
+        li.toolbar_item {
+          float: left;
+          padding-left: 30px;
+          text-align: center;
+          list-style: none;
+          a {
+            position: relative;
+            cursor: pointer;
+            display: block;
+            text-decoration: none;
+            // width: $toolbar_button_width;
+            // height: $toolbar_button_height;
+            text-align: center;
+            color: black;
+            font-size: 12px;
+            @include text-shadow(white, 0px, 1px, 0);
+            span {
+              // display: block;
+              // float: none;
+              // position: absolute;
+              // display: inline-block;
+              float: right;
+              position: relative;
+              padding: 0.2em 1em 0 1em;
+              // bottom: 0px;
+              // left: 0px;
+              // right: 0px;
+              height: 15px;
+            }
+          }
+        }
+      }
+    }
+    .toolbar-select {
       float: right;
       position: relative;
       ul {
         margin: 0;
         padding: 0;
-        float: right;
+        // float: right;
         li.toolbar_item {
           float: left;
           padding-left: 5px;
@@ -68,90 +109,90 @@ $toolbar_button_height: 50px;
   }
 }
 
-.toolbar_icon_filter {
-  background: image-url("ui/search_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_refresh {
-  background: image-url("ui/refresh_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_delete_x {
-  background: image-url("ui/delete_icon_x.png") no-repeat top center;
-}
-
-.toolbar_icon_delete {
-  background: image-url("ui/delete_icon_trash.png") no-repeat top center;
-}
-
-.toolbar_icon_add {
-  background: image-url("ui/create_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_send_mail {
-  background: image-url('ui/mail_icon.png') no-repeat top center;
-}
-
-.toolbar_icon_edit {
-  background: image-url("ui/batch_update.png") no-repeat top center;
-}
-
-.toolbar_icon_batch_edit {
-  background: image-url("ui/form_edit_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_toggle {
-  background: image-url("ui/toggle_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_sync {
-  background: image-url("ui/sync_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_remove {
-  background: image-url("ui/remove_icon.png") no-repeat top center;
-}
+// .toolbar_icon_filter {
+//   background: image-url("ui/search_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_refresh {
+//   background: image-url("ui/refresh_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_delete_x {
+//   background: image-url("ui/delete_icon_x.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_delete {
+//   background: image-url("ui/delete_icon_trash.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_add {
+//   background: image-url("ui/create_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_send_mail {
+//   background: image-url('ui/mail_icon.png') no-repeat top center;
+// }
+//
+// .toolbar_icon_edit {
+//   background: image-url("ui/batch_update.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_batch_edit {
+//   background: image-url("ui/form_edit_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_toggle {
+//   background: image-url("ui/toggle_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_sync {
+//   background: image-url("ui/sync_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_remove {
+//   background: image-url("ui/remove_icon.png") no-repeat top center;
+// }
 
 .toolbar_icon_disabled {
   @include opacity(0.4);
   cursor: default !important;
 }
 
-.toolbar_icon_link {
-  background: image-url("ui/link_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_unlink {
-  background: image-url("ui/unlink_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_wizard {
-  background: image-url("ui/wizard_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_allocation {
-  background: image-url("ui/allocation_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_all {
-  background: image-url("ui/all_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_grid {
-  background: image-url("ui/grid_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_clock {
-  background: image-url("ui/clock_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_pdf {
-  background: image-url("ui/pdf_icon.png") no-repeat top center;
-}
-
-.toolbar_icon_swap {
-  background: image-url("ui/swap_icon.png") no-repeat top center;
-}
+// .toolbar_icon_link {
+//   background: image-url("ui/link_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_unlink {
+//   background: image-url("ui/unlink_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_wizard {
+//   background: image-url("ui/wizard_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_allocation {
+//   background: image-url("ui/allocation_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_all {
+//   background: image-url("ui/all_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_grid {
+//   background: image-url("ui/grid_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_clock {
+//   background: image-url("ui/clock_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_pdf {
+//   background: image-url("ui/pdf_icon.png") no-repeat top center;
+// }
+//
+// .toolbar_icon_swap {
+//   background: image-url("ui/swap_icon.png") no-repeat top center;
+// }
 
 .add_detail_action {
   min-width: 75px;
