FEATURE #67027 - MD inplemetation for ToolBar: Change action name: Add -> Create

--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -1,4 +1,4 @@
-- if grid.action_names.include?('add') || grid.action_names.include?('hotkey_add') || grid.action_names.include?('detail_add')
+- if grid.action_names.include?('create') || grid.action_names.include?('hotkey_add') || grid.action_names.include?('detail_add')
   = render '/form'
 
   -# :ruby
