--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -6,7 +6,7 @@
         grid.class::SENSITIVE_ACTIONS.exclude?(item.options[:name].to_s) || grid.screen.authorize_create?
       end
       toolbar_items_global, toolbar_items_select = toolbar_items.partition do |item|
-        [:add, :excel].include?(item.options[:name].to_sym)
+        [:create, :export].include?(item.options[:name].to_sym)
       end
     .grid-header
       %h2= grid.title
