--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -1,10 +1,10 @@
 @import "base";
 
-$column_header_height: 23px;
+$column_header_height: 35px;
 $column_header_padding: 4px;
 $column_header_border_color: #dce0e2;
 
-$odd_row_background: #f5f9fc;
+$odd_row_background: $menu_background_color;
 $selected_row_background: #81abd7;
 
 $pager_background: #efeff0;
@@ -13,12 +13,7 @@ $pager_background: #efeff0;
 
 .slick-header-column.ui-state-default, .ui-widget-content .slick-header-column.ui-state-default {
   height: $column_header_height - $column_header_padding * 2;
-  line-height: $column_header_height - $column_header_padding * 2;
-  padding: $column_header_padding;
-  background: image-url("ui/column_header_background.png") repeat-x;
   border: none;
-  border-left: 1px solid $column_header_border_color;
-  text-align: center;
   position: relative;
 }
 
@@ -27,7 +22,6 @@ $pager_background: #efeff0;
 }
 
 .ui-state-default.slick-header-column.slick-header-column-sorted {
-  background: image-url("ui/column_header_background_selected.png") repeat-x;
   font-style: normal;
 }
 
@@ -48,6 +42,10 @@ $pager_background: #efeff0;
 /* Grid Rows Headers */
 
 //.ui-widget-content.slick-row.even,.ui-widget-content.slick-row.odd
+
+.slick-row.ui-widget-content {
+  border-top: 1px solid #babfce;
+}
 
 .ui-widget-content.slick-row.odd {
   background: $odd_row_background;
@@ -81,6 +79,10 @@ $pager_background: #efeff0;
       color: black;
     }
   }
+}
+
+.slick-cell, .slick-headerrow-column , .slick-footerrow-column {
+  border: 1px solid transparent;
 }
 
 .ui-widget-content.slick-row.ui-state-active.selected {
@@ -124,7 +126,6 @@ $pager_background: #efeff0;
 /* Page styling */
 .pager, .slick-pager {
   border: 0;
-
   background: $pager_background;
   font-size: 12px;
 }
