--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -1,30 +1,22 @@
 #notificationContainer {
   position: absolute;
-  top: 0;
-  left: 50%;
+  bottom: 0;
+  left: 60%;
   margin-left: -250px;
-  width: 500px;
+  width: 300px;
   z-index: 1002;
   .notification {
-    margin-bottom: 10px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    padding: 5px;
-    background: #ffe78f;
-    background: -moz-linear-gradient(bottom, #fff3c4, #ffe78f);
-    background: -ms-linear-gradient(bottom, #fff3c4, #ffe78f);
-    background: -o-linear-gradient(bottom, #fff3c4, #ffe78f);
-    background: -webkit-linear-gradient(bottom, #fff3c4, #ffe78f);
-    background: linear-gradient(bottom, #fff3c4, #ffe78f);
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    border-radius: 1px;
+    height: 40px;
+    padding: 13px 20px 13px 20px;
+    background: #333333;
+    vertical-align: middle;
     -moz-box-shadow: 1px 2px 5px black;
     -webkit-box-shadow: 1px 2px 5px black;
     box-shadow: 1px 2px 5px black;
-    font-size: 16px;
-    text-align: center;
-    color: #7f5401;
-    text-shadow: white 0px 1px 1px;
-    -webkit-font-smoothing: antialiased;
-    cursor: pointer;
+    font-size: 14px;
+    color: white;
   }
 }
