--- a/app/assets/stylesheets/columnpicker.scss
+++ b/app/assets/stylesheets/columnpicker.scss
@@ -10,11 +10,13 @@
     border-color: rgba(247, 246, 239, 0.39);
   }
   #reset_to_default {
+    padding-left: 12px;
+    padding-right: 12px;
     color: gray;
     span {
       float: right;
+      padding-right: 12px;
       font-size: 12px;
-      padding-left: 10px;
       padding-top: 4px;
     }
   }
