FEATURE #67213 - MD implement for Grid Filter: Add new headers with MD input-field

--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -11,6 +11,11 @@ $pager_background: #efeff0;
 
 /* Grid Column Headers */
 
+.new-header-column {
+  display: inline-block;
+  float: left;
+}
+
 .slick-header-column.ui-state-default, .ui-widget-content .slick-header-column.ui-state-default {
   height: $column_header_height - $column_header_padding * 2;
   border: none;
