--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -34,14 +34,20 @@ $pager_background: #efeff0;
   font-style: normal;
 }
 
-.slick-sort-indicator-desc,.slick-sort-indicator-asc {
+// .slick-sort-indicator,.slick-sort-indicator-desc,.slick-sort-indicator-asc {
+.slick-sort-indicator {
   display: block;
   position: absolute;
-  right: 4px;
-  top: 4px;
+  right: 10px;
+  top: 25px;
   width: 9px;
   height: 8px;
   background: image-url("ui/sort_indicator_desc.png") no-repeat;
+  opacity: 0;
+}
+
+.slick-sort-indicator-desc,.slick-sort-indicator-asc {
+  opacity: 1.0;
 }
 
 .slick-sort-indicator.slick-sort-indicator-asc {
