FEATURE #67214 - MD implement for Form: Form & Text Input

--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -8,6 +8,7 @@
   title = (is_new ? 'Create new' : 'Update') + " #{model_name.titleize}"
   action = is_new ? 'create' : 'update'
 .create_form{:id => "#{grid.name}_form", :title => title, data: {action: action}}
+  %h5.title= title
   = form_for object, :url => grid.path do |form|
     = hidden_field_tag :grid, grid.class.to_s
     = hidden_field_tag :screen, screen.class.to_s
@@ -109,11 +110,12 @@
               = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-field" => field
           .field_error
     .submit
+      .btn-flat.close CANCEL
       - if is_new
-        %input.btn.success{:id => "#{grid.name}_submit", :name => "commit", :type => "submit", :value => " Create "}/
+        %input.btn{:id => "#{grid.name}_submit", :name => "commit", :type => "submit", :value => " Create "}/
         %input.btn{:id => "#{grid.name}_submit_continue", :name => "commit", :type => "submit", :value => " Create and Continue "}/
       - else
-        %input.btn.success.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  Update  "}/
+        %input.btn.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  Update  "}/
 
 :javascript
   $('##{grid.name}_form select[data-required="true"]').chosen();
