--- a/app/assets/stylesheets/grid_form.scss
+++ b/app/assets/stylesheets/grid_form.scss
@@ -1,47 +1,65 @@
 @import "base";
 
 .create_form {
-  display: none;
-  background-color: #ededed !important;
-  // overflow-y: auto !important
-  form {
-    padding: 20px 0;
-    .field {
-      padding: 5px 0;
-      label {
-        width: 120px;
-        margin-right: 5px;
-        text-align: right;
-        display: inline-block;
-        padding-top: 5px;
-        vertical-align: top;
-      }
-      input[type=text] {
-        width: 220px;
-        padding: 3px 2px;
-      }
-
-
-    }
-    .submit {
-      padding: 10px 0 10px 130px;
-    }
-    .actions {
-      margin-top: 5px;
-      padding: 0 50px;
-    }
+  .title {
+    padding-bottom: 0.5em;
+    margin-top: 0;
+  }
+  .field {
+    padding: 1em 0 1em 0;
+  }
+  .submit {
+    float: right;
+    padding-bottom: 1.5em;
   }
 }
 
-.input_clean_up {
-  display: inline-block;
-  vertical-align: middle;
-  width: 12px;
-  height: 13px;
-  font-size: 1px;
-  background: image-url('chosen-sprite.png') right top no-repeat;
-
-  &:hover {
-    background-position: right -11px;
-  }
+.ui-dialog .create_form.ui-dialog-content {
+  padding: 1em 2em;
 }
+
+// .create_form {
+//   display: none;
+//   // background-color: #ededed !important;
+//   // overflow-y: auto !important
+//   form {
+//     padding: 20px 0;
+//     .field {
+//       padding: 5px 0;
+//       label {
+//         width: 120px;
+//         margin-right: 5px;
+//         text-align: right;
+//         display: inline-block;
+//         padding-top: 5px;
+//         vertical-align: top;
+//       }
+//       input[type=text] {
+//         width: 220px;
+//         padding: 3px 2px;
+//       }
+//
+//
+//     }
+//     .submit {
+//       padding: 10px 0 10px 130px;
+//     }
+//     .actions {
+//       margin-top: 5px;
+//       padding: 0 50px;
+//     }
+//   }
+// }
+//
+// .input_clean_up {
+//   display: inline-block;
+//   vertical-align: middle;
+//   width: 12px;
+//   height: 13px;
+//   font-size: 1px;
+//   background: image-url('chosen-sprite.png') right top no-repeat;
+//
+//   &:hover {
+//     background-position: right -11px;
+//   }
+// }
