--- a/app/assets/stylesheets/grid_form.scss
+++ b/app/assets/stylesheets/grid_form.scss
@@ -2,20 +2,35 @@
 
 .create_form {
   .title {
-    padding-bottom: 0.5em;
+    padding-top: 1em;
+    padding-bottom: 1em;
     margin-top: 0;
   }
   .field {
     padding: 1em 0 1em 0;
+    margin: 0;
+    .awesomplete {
+      width: 100%;
+      input[type=text] {
+        height: 1.5rem;
+        margin: 0;
+      }
+    }
+    .chzn-container {
+      display: block;
+      padding-top: 1em;
+    }
   }
   .submit {
     float: right;
-    padding-bottom: 1.5em;
+    padding-bottom: 2em;
   }
 }
 
-.ui-dialog .create_form.ui-dialog-content {
-  padding: 1em 2em;
+.ui-dialog {
+  .create_form.ui-dialog-content {
+    padding: 1em 3em;
+  }
 }
 
 // .create_form {
