FEATURE #67214 - MD implement for Form: Muilti-Select

--- a/app/assets/stylesheets/grid_form.scss
+++ b/app/assets/stylesheets/grid_form.scss
@@ -18,6 +18,10 @@
     }
     .chzn-container {
       display: block;
+      .chzn-choices {
+        background: none;
+        border: 0;
+      }
       .chzn-drop {
         border: oldlace;
         li {
