FEATURE #67214 - MD implement for Form: Add input-field class to all fields

--- a/app/assets/stylesheets/grid_form.scss
+++ b/app/assets/stylesheets/grid_form.scss
@@ -17,7 +17,7 @@
       }
     }
     .chzn-container {
-      display: block;
+      top: 20px;
       .chzn-choices {
         background: none;
         border: 0;
