--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -100,7 +100,8 @@
             = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
           - else
             - if column.sql_type.to_s.downcase == 'boolean'
-              = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field
+              = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, class: 'filled-in'
+              = form.label column_name
             - elsif column.sql_type.to_s.downcase == 'text'
               = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, class: "materialize-textarea"
             - else
