FEATURE #67214 - MD implement for Form: Layout for DropDown

--- a/app/assets/stylesheets/grid_form.scss
+++ b/app/assets/stylesheets/grid_form.scss
@@ -21,14 +21,21 @@
       .chzn-choices {
         background: none;
         border: 0;
+        .search-field {
+          input {
+            height: 1em;
+          }
+        }
       }
       .chzn-drop {
         border: oldlace;
+        border-radius: 0;
         li {
           padding: 0.2em 1em 0.2em 1em;
         }
         .chzn-search {
           input {
+            height: 2em;
             padding: 0 1.2em 0 1em;
             border: 0;
             background: none;
@@ -37,6 +44,7 @@
       }
       .chzn-single {
         border: 0;
+        border-radius: 0;
         background-image: none;
         div {
           background: none;
