--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -8,6 +8,7 @@
       toolbar_items_global, toolbar_items_select = toolbar_items.partition do |item|
         [:create, :export].include?(item.options[:name].to_sym)
       end
+      user_id = respond_to?(:current_user) ? current_user.id : -1
     .grid-header
       %h2= grid.title
       - grid.header_actions.each do |a|
@@ -44,7 +45,7 @@
                              #{grid.action_configs.to_json.html_safe},
                              #{grid.behavior_configs.to_json.html_safe},
                              #{grid.options.to_json.html_safe},
-                             #{current_user.id});
+                             #{user_id});
 
   // Initial adjusting toolbar
   WulinMaster.dynamicToolbar.reset('#{grid.name}', true);
