FEATURE #67029 - MD implement for Grid View: Change View feature works

--- a/app/assets/stylesheets/grid_states.scss
+++ b/app/assets/stylesheets/grid_states.scss
@@ -1,7 +1,11 @@
-.grid_states_switcher.input-field {
+.grid_states_switcher {
   float: left;
-  margin-left: 2rem;
-  margin-top: 0.2rem;
+  margin-left: 30px;
+  padding-top: 15px;
+  .btn {
+    text-transform: none;
+    color: grey;
+  }
 }
 
 // .grid_states_switcher {
