FEATURE #67029 - MD implement for Grid View: Layout

--- a/app/assets/stylesheets/grid_states.scss
+++ b/app/assets/stylesheets/grid_states.scss
@@ -5,6 +5,13 @@
   .btn {
     text-transform: none;
     color: grey;
+    width: 12rem;
+  }
+  .dropdown-content {
+    width: 12rem;
+    li > a > i {
+      margin-right: 1rem;
+    }
   }
 }
 
