FEATURE #67029 - MD implement for Grid View: Submit in Modal footor

--- a/app/assets/stylesheets/grid_states.scss
+++ b/app/assets/stylesheets/grid_states.scss
@@ -15,6 +15,13 @@
   }
 }
 
+#create-view.modal {
+  width: 30rem;
+  .btn-flat {
+    margin-right: 1rem;
+  }
+}
+
 // .grid_states_switcher {
 //   min-width: 250px;
 //   float: left;
